--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {},
   "devDependencies": {
     "gulp": "^3.8.10",
+    "gulp-6to5": "^3.0.0",
     "gulp-gh-pages": "^0.4.0",
     "gulp-jshint": "^1.9.0",
     "gulp-watch": "^4.1.0"
