--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "6to5ify": "^4.1.0",
+    "browserify": "^8.1.3",
     "gulp": "^3.8.10",
     "gulp-6to5": "^3.0.0",
     "gulp-gh-pages": "^0.4.0",
