--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "6to5ify": "^4.1.0",
+    "babelify": "^5.0.3",
     "browserify": "^8.1.3",
     "gulp": "^3.8.10",
     "gulp-gh-pages": "^0.4.0",
