--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^3.8.10",
     "gulp-gh-pages": "^0.4.0",
     "gulp-jshint": "^1.9.0",
+    "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.0"
   },
   "homepage": "http://alxgbsn.co.uk/wavepad",
