--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
   "devDependencies": {
     "babelify": "^5.0.3",
     "browserify": "^8.1.3",
+    "del": "^1.1.1",
     "gulp": "^3.8.10",
     "gulp-gh-pages": "^0.4.0",
+    "gulp-if": "^1.2.5",
     "gulp-jshint": "^1.9.0",
     "gulp-uglify": "^1.1.0",
-    "gulp-watch": "^4.1.0"
+    "gulp-watch": "^4.1.0",
+    "minimist": "^1.1.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "homepage": "http://alxgbsn.co.uk/wavepad",
   "repository": {
