--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "babelify": "^6.3.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "del": "^2.0.2",
     "gulp": "^3.8.10",
