--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.0",
     "minimist": "^1.1.1",
+    "run-sequence": "^1.1.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
