--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.5.0",
   "description": "An experimental synthesizer built using the Web Audio API.",
   "private": true,
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "http-server ./dist"
+  },
   "dependencies": {},
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
@@ -15,6 +19,7 @@
     "gulp-jshint": "^2.0.0",
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.0",
+    "http-server": "^0.8.5",
     "minimist": "^1.1.1",
     "run-sequence": "^1.1.5",
     "vinyl-buffer": "^1.0.0",
