--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "An experimental synthesizer built using the Web Audio API.",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server ./dist"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {},
   "devDependencies": {
@@ -19,7 +18,6 @@
     "gulp-jshint": "^2.0.0",
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.0",
-    "http-server": "^0.8.5",
     "minimist": "^1.1.1",
     "run-sequence": "^1.1.5",
     "vinyl-buffer": "^1.0.0",
