--- a/.jshintrc
+++ b/.jshintrc
@@ -1,13 +1,5 @@
 {
-	"node": true,
 	"browser": true,
 	"esnext": true,
-	"bitwise": true,
-	"curly": true,
-	"immed": true,
-	"newcap": true,
-	"noarg": true,
-	"undef": true,
-	"unused": "vars",
-	"strict": false
+  "browserify": true
 }
