Update theme_color in manifest.json

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,5 +13,5 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#d81f38"
+  "theme_color": "#000000"
 }
