Update SW bootstrap

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,6 +12,7 @@
   ],
   "start_url": "/",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#000000",
   "theme_color": "#000000"
 }
