Correct start_url path

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,7 +10,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/",
+  "start_url": "/wavepad/",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#000000",
